Format notebooks and update types

--- a/docs/source/nbconvert_library.ipynb
+++ b/docs/source/nbconvert_library.ipynb
@@ -46,9 +46,9 @@
    "source": [
     "from urllib.request import urlopen\n",
     "\n",
-    "url = 'https://jakevdp.github.io/downloads/notebooks/XKCD_plots.ipynb'\n",
+    "url = \"https://jakevdp.github.io/downloads/notebooks/XKCD_plots.ipynb\"\n",
     "response = urlopen(url).read().decode()\n",
-    "response[0:60] + ' ...'"
+    "response[0:60] + \" ...\""
    ]
   },
   {
@@ -102,7 +102,7 @@
     "\n",
     "# 2. Instantiate the exporter. We use the `classic` template for now; we'll get into more details\n",
     "# later about how to customize the exporter further.\n",
-    "html_exporter = HTMLExporter(template_name='classic')\n",
+    "html_exporter = HTMLExporter(template_name=\"classic\")\n",
     "\n",
     "# 3. Process the notebook we loaded earlier\n",
     "(body, resources) = html_exporter.from_notebook_node(jake_notebook)"
@@ -125,7 +125,7 @@
    },
    "outputs": [],
    "source": [
-    "print(body[:400] + '...')"
+    "print(body[:400] + \"...\")"
    ]
   },
   {
@@ -148,9 +148,9 @@
    "outputs": [],
    "source": [
     "print(\"Resources:\", resources.keys())\n",
-    "print(\"Metadata:\", resources['metadata'].keys())\n",
-    "print(\"Inlining:\", resources['inlining'].keys())\n",
-    "print(\"Extension:\", resources['output_extension'])"
+    "print(\"Metadata:\", resources[\"metadata\"].keys())\n",
+    "print(\"Inlining:\", resources[\"inlining\"].keys())\n",
+    "print(\"Extension:\", resources[\"output_extension\"])"
    ]
   },
   {
@@ -192,9 +192,9 @@
     "# Convert the notebook to RST format\n",
     "(body, resources) = rst_exporter.from_notebook_node(jake_notebook)\n",
     "\n",
-    "print(body[:970] + '...')\n",
-    "print('[.....]')\n",
-    "print(body[800:1200] + '...')"
+    "print(body[:970] + \"...\")\n",
+    "print(\"[.....]\")\n",
+    "print(body[800:1200] + \"...\")"
    ]
   },
   {
@@ -218,7 +218,7 @@
    },
    "outputs": [],
    "source": [
-    "sorted(resources['outputs'].keys())"
+    "sorted(resources[\"outputs\"].keys())"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "source": [
     "from IPython.display import Image\n",
     "\n",
-    "Image(data=resources['outputs']['output_3_0.png'], format='png')"
+    "Image(data=resources[\"outputs\"][\"output_3_0.png\"], format=\"png\")"
    ]
   },
   {
@@ -302,7 +302,7 @@
     "from traitlets.config import Config\n",
     "\n",
     "c = Config()\n",
-    "c.HTMLExporter.preprocessors = ['nbconvert.preprocessors.ExtractOutputPreprocessor']\n",
+    "c.HTMLExporter.preprocessors = [\"nbconvert.preprocessors.ExtractOutputPreprocessor\"]\n",
     "\n",
     "# create the new exporter using the custom config\n",
     "html_exporter_with_figs = HTMLExporter(config=c)\n",
@@ -336,7 +336,7 @@
     "print(sorted(resources_with_fig.keys()))\n",
     "\n",
     "print(\"\\nthe actual figures are:\")\n",
-    "print(sorted(resources_with_fig['outputs'].keys()))"
+    "print(sorted(resources_with_fig[\"outputs\"].keys()))"
    ]
   },
   {
@@ -382,6 +382,7 @@
    "outputs": [],
    "source": [
     "from traitlets import Integer\n",
+    "\n",
     "from nbconvert.preprocessors import Preprocessor\n",
     "\n",
     "\n",
@@ -450,8 +451,8 @@
     "\n",
     "dl = DictLoader(\n",
     "    {\n",
-    "        'footer': \"\"\"\n",
-    "{%- extends 'lab/index.html.j2' -%} \n",
+    "        \"footer\": \"\"\"\n",
+    "{%- extends 'lab/index.html.j2' -%}\n",
     "\n",
     "{% block footer %}\n",
     "FOOOOOOOOTEEEEER\n",
@@ -461,9 +462,9 @@
     ")\n",
     "\n",
     "\n",
-    "exportHTML = HTMLExporter(extra_loaders=[dl], template_file='footer')\n",
+    "exportHTML = HTMLExporter(extra_loaders=[dl], template_file=\"footer\")\n",
     "(body, resources) = exportHTML.from_notebook_node(jake_notebook)\n",
-    "for l in body.split('\\n')[-4:]:\n",
+    "for l in body.split(\"\\n\")[-4:]:\n",
     "    print(l)"
    ]
   },
