--- a/tests/exporters/files/notebook_inject.ipynb
+++ b/tests/exporters/files/notebook_inject.ipynb
@@ -35,19 +35,17 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "image/svg+xml": [
        "<script>alert('image/svg+xml output')</script>"
       ]
      },
      "execution_count": null,
-     "metadata": {}
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -56,7 +54,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "image/png": [
        ""
@@ -67,12 +64,11 @@
       "filenames": {
        "image/png": "\"><script>alert('png filenames')</script>"
       }
-     }
+     },
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -81,7 +77,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "image/jpeg": [
        ""
@@ -92,12 +87,11 @@
       "filenames": {
        "image/jpeg": "\"><script>alert('jpg filenames')</script>"
       }
-     }
+     },
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -106,19 +100,17 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "image/png": [
        "\"><script>alert('image/png output')</script>"
       ]
      },
      "execution_count": null,
-     "metadata": {}
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -127,19 +119,17 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "image/jpeg": [
        "\"><script>alert('image/jpeg output')</script>"
       ]
      },
      "execution_count": null,
-     "metadata": {}
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -148,7 +138,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "image/png": [
        "abcd"
@@ -157,12 +146,11 @@
      "execution_count": null,
      "metadata": {
       "width": "><script>alert('output.metadata.width png injection')</script>"
-     }
+     },
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -171,7 +159,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "image/png": [
        "abcd"
@@ -182,12 +169,11 @@
       "width": [
        "><script>alert('output.metadata.width png injection')</script>"
       ]
-     }
+     },
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -196,7 +182,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "image/png": [
        "abcd"
@@ -205,12 +190,11 @@
      "execution_count": null,
      "metadata": {
       "height": "><script>alert('output.metadata.height png injection')</script>"
-     }
+     },
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -219,20 +203,18 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "wid1",
-       "foo": "\"</script><script>alert('output.data.application/vnd.jupyter.widget-view+json injection')//"
+       "foo": "\"</script><script>alert('output.data.application/vnd.jupyter.widget-view+json injection')//",
+       "model_id": "wid1"
       }
      },
      "execution_count": null,
-     "metadata": {}
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -254,7 +236,7 @@
    "source": [
     "import os\n",
     "\n",
-    "os.system('touch /tmp/pwned')"
+    "os.system(\"touch /tmp/pwned\")"
    ]
   },
   {
@@ -277,7 +259,7 @@
    "source": [
     "import os\n",
     "\n",
-    "os.system('touch /tmp/pwned')"
+    "os.system(\"touch /tmp/pwned\")"
    ]
   },
   {
@@ -300,12 +282,11 @@
    "source": [
     "import os\n",
     "\n",
-    "os.system('touch /tmp/pwned')"
+    "os.system(\"touch /tmp/pwned\")"
    ]
   }
  ],
  "metadata": {
-  "title": "TITLE</title><script>alert('title')</script>",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -323,12 +304,13 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.5"
   },
+  "title": "TITLE</title><script>alert('title')</script>",
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
+    "foo": "pwntester</script><script>alert('widgets');//",
     "state": {
      "wid1": {}
-    },
-    "foo": "pwntester</script><script>alert('widgets');//"
+    }
    }
   }
  },
