--- a/tests/files/Widget_List.ipynb
+++ b/tests/files/Widget_List.ipynb
@@ -67,12 +67,12 @@
     "    min=0,\n",
     "    max=10,\n",
     "    step=1,\n",
-    "    description='Test:',\n",
+    "    description=\"Test:\",\n",
     "    disabled=False,\n",
     "    continuous_update=False,\n",
-    "    orientation='horizontal',\n",
+    "    orientation=\"horizontal\",\n",
     "    readout=True,\n",
-    "    readout_format='d',\n",
+    "    readout_format=\"d\",\n",
     ")"
    ]
   },
@@ -113,12 +113,12 @@
     "    min=0,\n",
     "    max=10.0,\n",
     "    step=0.1,\n",
-    "    description='Test:',\n",
+    "    description=\"Test:\",\n",
     "    disabled=False,\n",
     "    continuous_update=False,\n",
-    "    orientation='horizontal',\n",
+    "    orientation=\"horizontal\",\n",
     "    readout=True,\n",
-    "    readout_format='.1f',\n",
+    "    readout_format=\".1f\",\n",
     ")"
    ]
   },
@@ -155,12 +155,12 @@
     "    min=0,\n",
     "    max=10.0,\n",
     "    step=0.1,\n",
-    "    description='Test:',\n",
+    "    description=\"Test:\",\n",
     "    disabled=False,\n",
     "    continuous_update=False,\n",
-    "    orientation='vertical',\n",
+    "    orientation=\"vertical\",\n",
     "    readout=True,\n",
-    "    readout_format='.1f',\n",
+    "    readout_format=\".1f\",\n",
     ")"
    ]
   },
@@ -205,7 +205,7 @@
     "    min=-10,  # max exponent of base\n",
     "    max=10,  # min exponent of base\n",
     "    step=0.2,  # exponent step\n",
-    "    description='Log Slider',\n",
+    "    description=\"Log Slider\",\n",
     ")"
    ]
   },
@@ -242,12 +242,12 @@
     "    min=0,\n",
     "    max=10,\n",
     "    step=1,\n",
-    "    description='Test:',\n",
+    "    description=\"Test:\",\n",
     "    disabled=False,\n",
     "    continuous_update=False,\n",
-    "    orientation='horizontal',\n",
+    "    orientation=\"horizontal\",\n",
     "    readout=True,\n",
-    "    readout_format='d',\n",
+    "    readout_format=\"d\",\n",
     ")"
    ]
   },
@@ -284,12 +284,12 @@
     "    min=0,\n",
     "    max=10.0,\n",
     "    step=0.1,\n",
-    "    description='Test:',\n",
+    "    description=\"Test:\",\n",
     "    disabled=False,\n",
     "    continuous_update=False,\n",
-    "    orientation='horizontal',\n",
+    "    orientation=\"horizontal\",\n",
     "    readout=True,\n",
-    "    readout_format='.1f',\n",
+    "    readout_format=\".1f\",\n",
     ")"
    ]
   },
@@ -326,9 +326,9 @@
     "    min=0,\n",
     "    max=10,\n",
     "    step=1,\n",
-    "    description='Loading:',\n",
-    "    bar_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    orientation='horizontal',\n",
+    "    description=\"Loading:\",\n",
+    "    bar_style=\"\",  # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    orientation=\"horizontal\",\n",
     ")"
    ]
   },
@@ -369,9 +369,9 @@
     "    min=0,\n",
     "    max=10.0,\n",
     "    step=0.1,\n",
-    "    description='Loading:',\n",
-    "    bar_style='info',\n",
-    "    orientation='horizontal',\n",
+    "    description=\"Loading:\",\n",
+    "    bar_style=\"info\",\n",
+    "    orientation=\"horizontal\",\n",
     ")"
    ]
   },
@@ -405,7 +405,7 @@
     }
    ],
    "source": [
-    "widgets.BoundedIntText(value=7, min=0, max=10, step=1, description='Text:', disabled=False)"
+    "widgets.BoundedIntText(value=7, min=0, max=10, step=1, description=\"Text:\", disabled=False)"
    ]
   },
   {
@@ -440,7 +440,7 @@
     }
    ],
    "source": [
-    "widgets.BoundedFloatText(value=7.5, min=0, max=10.0, step=0.1, description='Text:', disabled=False)"
+    "widgets.BoundedFloatText(value=7.5, min=0, max=10.0, step=0.1, description=\"Text:\", disabled=False)"
    ]
   },
   {
@@ -471,7 +471,7 @@
     }
    ],
    "source": [
-    "widgets.IntText(value=7, description='Any:', disabled=False)"
+    "widgets.IntText(value=7, description=\"Any:\", disabled=False)"
    ]
   },
   {
@@ -506,7 +506,7 @@
     }
    ],
    "source": [
-    "widgets.FloatText(value=7.5, description='Any:', disabled=False)"
+    "widgets.FloatText(value=7.5, description=\"Any:\", disabled=False)"
    ]
   },
   {
@@ -557,11 +557,11 @@
    "source": [
     "widgets.ToggleButton(\n",
     "    value=False,\n",
-    "    description='Click me',\n",
+    "    description=\"Click me\",\n",
     "    disabled=False,\n",
-    "    button_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltip='Description',\n",
-    "    icon='check',\n",
+    "    button_style=\"\",  # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip=\"Description\",\n",
+    "    icon=\"check\",\n",
     ")"
    ]
   },
@@ -597,7 +597,7 @@
     }
    ],
    "source": [
-    "widgets.Checkbox(value=False, description='Check me', disabled=False)"
+    "widgets.Checkbox(value=False, description=\"Check me\", disabled=False)"
    ]
   },
   {
@@ -632,7 +632,7 @@
    "source": [
     "widgets.Valid(\n",
     "    value=False,\n",
-    "    description='Valid!',\n",
+    "    description=\"Valid!\",\n",
     ")"
    ]
   },
@@ -687,9 +687,9 @@
    ],
    "source": [
     "widgets.Dropdown(\n",
-    "    options=['1', '2', '3'],\n",
-    "    value='2',\n",
-    "    description='Number:',\n",
+    "    options=[\"1\", \"2\", \"3\"],\n",
+    "    value=\"2\",\n",
+    "    description=\"Number:\",\n",
     "    disabled=False,\n",
     ")"
    ]
@@ -723,9 +723,9 @@
    ],
    "source": [
     "widgets.Dropdown(\n",
-    "    options=[('One', 1), ('Two', 2), ('Three', 3)],\n",
+    "    options=[(\"One\", 1), (\"Two\", 2), (\"Three\", 3)],\n",
     "    value=2,\n",
-    "    description='Number:',\n",
+    "    description=\"Number:\",\n",
     ")"
    ]
   },
@@ -762,9 +762,9 @@
    ],
    "source": [
     "widgets.RadioButtons(\n",
-    "    options=['pepperoni', 'pineapple', 'anchovies'],\n",
+    "    options=[\"pepperoni\", \"pineapple\", \"anchovies\"],\n",
     "    #     value='pineapple',\n",
-    "    description='Pizza topping:',\n",
+    "    description=\"Pizza topping:\",\n",
     "    disabled=False,\n",
     ")"
    ]
@@ -802,10 +802,10 @@
    ],
    "source": [
     "widgets.Select(\n",
-    "    options=['Linux', 'Windows', 'OSX'],\n",
-    "    value='OSX',\n",
+    "    options=[\"Linux\", \"Windows\", \"OSX\"],\n",
+    "    value=\"OSX\",\n",
     "    # rows=10,\n",
-    "    description='OS:',\n",
+    "    description=\"OS:\",\n",
     "    disabled=False,\n",
     ")"
    ]
@@ -839,12 +839,12 @@
    ],
    "source": [
     "widgets.SelectionSlider(\n",
-    "    options=['scrambled', 'sunny side up', 'poached', 'over easy'],\n",
-    "    value='sunny side up',\n",
-    "    description='I like my eggs ...',\n",
+    "    options=[\"scrambled\", \"sunny side up\", \"poached\", \"over easy\"],\n",
+    "    value=\"sunny side up\",\n",
+    "    description=\"I like my eggs ...\",\n",
     "    disabled=False,\n",
     "    continuous_update=False,\n",
-    "    orientation='horizontal',\n",
+    "    orientation=\"horizontal\",\n",
     "    readout=True,\n",
     ")"
    ]
@@ -882,9 +882,9 @@
     "import datetime\n",
     "\n",
     "dates = [datetime.date(2015, i, 1) for i in range(1, 13)]\n",
-    "options = [(i.strftime('%b'), i) for i in dates]\n",
+    "options = [(i.strftime(\"%b\"), i) for i in dates]\n",
     "widgets.SelectionRangeSlider(\n",
-    "    options=options, index=(0, 11), description='Months (2015)', disabled=False\n",
+    "    options=options, index=(0, 11), description=\"Months (2015)\", disabled=False\n",
     ")"
    ]
   },
@@ -921,11 +921,11 @@
    ],
    "source": [
     "widgets.ToggleButtons(\n",
-    "    options=['Slow', 'Regular', 'Fast'],\n",
-    "    description='Speed:',\n",
+    "    options=[\"Slow\", \"Regular\", \"Fast\"],\n",
+    "    description=\"Speed:\",\n",
     "    disabled=False,\n",
-    "    button_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltips=['Description of slow', 'Description of regular', 'Description of fast'],\n",
+    "    button_style=\"\",  # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltips=[\"Description of slow\", \"Description of regular\", \"Description of fast\"],\n",
     "    #     icons=['check'] * 3\n",
     ")"
    ]
@@ -960,10 +960,10 @@
    ],
    "source": [
     "widgets.SelectMultiple(\n",
-    "    options=['Apples', 'Oranges', 'Pears'],\n",
-    "    value=['Oranges'],\n",
+    "    options=[\"Apples\", \"Oranges\", \"Pears\"],\n",
+    "    value=[\"Oranges\"],\n",
     "    # rows=10,\n",
-    "    description='Fruits',\n",
+    "    description=\"Fruits\",\n",
     "    disabled=False,\n",
     ")"
    ]
@@ -1019,7 +1019,7 @@
    ],
    "source": [
     "widgets.Text(\n",
-    "    value='Hello World', placeholder='Type something', description='String:', disabled=False\n",
+    "    value=\"Hello World\", placeholder=\"Type something\", description=\"String:\", disabled=False\n",
     ")"
    ]
   },
@@ -1052,7 +1052,7 @@
    ],
    "source": [
     "widgets.Textarea(\n",
-    "    value='Hello World', placeholder='Type something', description='String:', disabled=False\n",
+    "    value=\"Hello World\", placeholder=\"Type something\", description=\"String:\", disabled=False\n",
     ")"
    ]
   },
@@ -1123,8 +1123,8 @@
    "source": [
     "widgets.HTML(\n",
     "    value=\"Hello <b>World</b>\",\n",
-    "    placeholder='Some HTML',\n",
-    "    description='Some HTML',\n",
+    "    placeholder=\"Some HTML\",\n",
+    "    description=\"Some HTML\",\n",
     ")"
    ]
   },
@@ -1158,8 +1158,8 @@
    "source": [
     "widgets.HTMLMath(\n",
     "    value=r\"Some math and <i>HTML</i>: \\(x^2\\) and $$\\frac{x+1}{x-1}$$\",\n",
-    "    placeholder='Some HTML',\n",
-    "    description='Some HTML',\n",
+    "    placeholder=\"Some HTML\",\n",
+    "    description=\"Some HTML\",\n",
     ")"
    ]
   },
@@ -1195,7 +1195,7 @@
     "image = file.read()\n",
     "widgets.Image(\n",
     "    value=image,\n",
-    "    format='png',\n",
+    "    format=\"png\",\n",
     "    width=300,\n",
     "    height=400,\n",
     ")"
@@ -1234,11 +1234,11 @@
    ],
    "source": [
     "widgets.Button(\n",
-    "    description='Click me',\n",
+    "    description=\"Click me\",\n",
     "    disabled=False,\n",
-    "    button_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltip='Click me',\n",
-    "    icon='check',\n",
+    "    button_style=\"\",  # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip=\"Click me\",\n",
+    "    icon=\"check\",\n",
     ")"
    ]
   },
@@ -1296,7 +1296,7 @@
     "    disabled=False,\n",
     ")\n",
     "slider = widgets.IntSlider()\n",
-    "widgets.jslink((play, 'value'), (slider, 'value'))\n",
+    "widgets.jslink((play, \"value\"), (slider, \"value\"))\n",
     "widgets.HBox([play, slider])"
    ]
   },
@@ -1330,7 +1330,7 @@
     }
    ],
    "source": [
-    "widgets.DatePicker(description='Pick a Date', disabled=False)"
+    "widgets.DatePicker(description=\"Pick a Date\", disabled=False)"
    ]
   },
   {
@@ -1361,7 +1361,7 @@
     }
    ],
    "source": [
-    "widgets.ColorPicker(concise=False, description='Pick a color', value='blue', disabled=False)"
+    "widgets.ColorPicker(concise=False, description=\"Pick a color\", value=\"blue\", disabled=False)"
    ]
   },
   {
@@ -1395,7 +1395,7 @@
    ],
    "source": [
     "widgets.FileUpload(\n",
-    "    accept='',  # Accepted file extension e.g. '.txt', '.pdf', 'image/*', 'image/*,.pdf'\n",
+    "    accept=\"\",  # Accepted file extension e.g. '.txt', '.pdf', 'image/*', 'image/*,.pdf'\n",
     "    multiple=False,  # True to accept multiple files upload else False\n",
     ")"
    ]
@@ -1571,8 +1571,8 @@
    ],
    "source": [
     "accordion = widgets.Accordion(children=[widgets.IntSlider(), widgets.Text()])\n",
-    "accordion.set_title(0, 'Slider')\n",
-    "accordion.set_title(1, 'Text')\n",
+    "accordion.set_title(0, \"Slider\")\n",
+    "accordion.set_title(1, \"Text\")\n",
     "accordion"
    ]
   },
@@ -1606,7 +1606,7 @@
     }
    ],
    "source": [
-    "tab_contents = ['P0', 'P1', 'P2', 'P3', 'P4']\n",
+    "tab_contents = [\"P0\", \"P1\", \"P2\", \"P3\", \"P4\"]\n",
     "children = [widgets.Text(description=name) for name in tab_contents]\n",
     "tab = widgets.Tab()\n",
     "tab.children = children\n",
@@ -1685,8 +1685,8 @@
    "source": [
     "tab_nest = widgets.Tab()\n",
     "tab_nest.children = [accordion, accordion]\n",
-    "tab_nest.set_title(0, 'An accordion')\n",
-    "tab_nest.set_title(1, 'Copy of the accordion')\n",
+    "tab_nest.set_title(0, \"An accordion\")\n",
+    "tab_nest.set_title(1, \"Copy of the accordion\")\n",
     "tab_nest"
    ]
   }
