--- a/tests/files/markdown_display_priority.ipynb
+++ b/tests/files/markdown_display_priority.ipynb
@@ -32,7 +32,7 @@
     "from IPython.display import set_matplotlib_formats\n",
     "\n",
     "# generate pdf and png images\n",
-    "set_matplotlib_formats('pdf', 'png')\n",
+    "set_matplotlib_formats(\"pdf\", \"png\")\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
