--- a/tests/files/notebook2.ipynb
+++ b/tests/files/notebook2.ipynb
@@ -47,8 +47,8 @@
    "source": [
     "from IPython.display import set_matplotlib_formats\n",
     "\n",
-    "set_matplotlib_formats('png', 'pdf')\n",
-    "matplotlib.rcParams['figure.figsize'] = (2, 1)"
+    "set_matplotlib_formats(\"png\", \"pdf\")\n",
+    "matplotlib.rcParams[\"figure.figsize\"] = (2, 1)"
    ]
   },
   {
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "ip.display_formatter.formatters['application/pdf'].type_printers"
+    "ip.display_formatter.formatters[\"application/pdf\"].type_printers"
    ]
   },
   {
