--- a/tests/files/notebook3_with_errors.ipynb
+++ b/tests/files/notebook3_with_errors.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Hello world, my number is {}\".format(24 - 1))"
+    "print(f\"Hello world, my number is {24 - 1}\")"
    ]
   },
   {
@@ -45,7 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"The answer to the question about life, the universe and everything is: {}\".format(43 - 1))"
+    "print(f\"The answer to the question about life, the universe and everything is: {43 - 1}\")"
    ]
   }
  ],
