--- a/tests/files/notebook4_jpeg.ipynb
+++ b/tests/files/notebook4_jpeg.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "from IPython.display import Image\n",
     "\n",
-    "Image('containerized_deployments.jpeg', embed=True)"
+    "Image(\"containerized_deployments.jpeg\", embed=True)"
    ]
   },
   {
