--- a/tests/files/Unexecuted_widget_2.ipynb
+++ b/tests/files/Unexecuted_widget_2.ipynb
@@ -14,12 +14,12 @@
     "    min=0,\n",
     "    max=10,\n",
     "    step=1,\n",
-    "    description='Test:',\n",
+    "    description=\"Test:\",\n",
     "    disabled=False,\n",
     "    continuous_update=False,\n",
-    "    orientation='horizontal',\n",
+    "    orientation=\"horizontal\",\n",
     "    readout=True,\n",
-    "    readout_format='d',\n",
+    "    readout_format=\"d\",\n",
     ")"
    ]
   }
