Correct rst mimetype to text/x-rst

--- a/tests/exporters/files/rst_output.ipynb
+++ b/tests/exporters/files/rst_output.ipynb
@@ -18,7 +18,7 @@
     "        return f'<div style=\"font-weight: bold; font-size: 16pt;\">{self.text}</div>'\n",
     "\n",
     "    def _repr_mimebundle_(self, include=None, exclude=None):\n",
-    "        return {\"text/restructuredtext\": \".. note::\\n\\n\" + indent(self.text, \"    \")}"
+    "        return {\"text/x-rst\": \".. note::\\n\\n\" + indent(self.text, \"    \")}"
    ]
   },
   {
@@ -33,9 +33,9 @@
        "<div style=\"font-weight: bold; font-size: 16pt;\">Testing testing</div>"
       ],
       "text/plain": [
-       "<__main__.Note at 0x7fe804028740>"
+       "<__main__.Note at 0x7f457c0250d0>"
       ],
-      "text/restructuredtext": [
+      "text/x-rst": [
        ".. note::\n",
        "\n",
        "    Testing testing"
