Try to fix failing CI tests.

--- a/tests/exporters/files/notebook_inject.ipynb
+++ b/tests/exporters/files/notebook_inject.ipynb
@@ -55,9 +55,7 @@
    "outputs": [
     {
      "data": {
-      "image/png": [
-       ""
-      ]
+      "image/png": ""
      },
      "execution_count": null,
      "metadata": {
@@ -78,9 +76,7 @@
    "outputs": [
     {
      "data": {
-      "image/jpeg": [
-       ""
-      ]
+      "image/jpeg": ""
      },
      "execution_count": null,
      "metadata": {
@@ -101,9 +97,7 @@
    "outputs": [
     {
      "data": {
-      "image/png": [
-       "\"><script>alert('image/png output')</script>"
-      ]
+      "image/png": "\"><script>alert('image/png output')</script>"
      },
      "execution_count": null,
      "metadata": {},
@@ -120,9 +114,7 @@
    "outputs": [
     {
      "data": {
-      "image/jpeg": [
-       "\"><script>alert('image/jpeg output')</script>"
-      ]
+      "image/jpeg": "\"><script>alert('image/jpeg output')</script>"
      },
      "execution_count": null,
      "metadata": {},
@@ -139,9 +131,7 @@
    "outputs": [
     {
      "data": {
-      "image/png": [
-       "abcd"
-      ]
+      "image/png": "abcd"
      },
      "execution_count": null,
      "metadata": {
@@ -160,9 +150,7 @@
    "outputs": [
     {
      "data": {
-      "image/png": [
-       "abcd"
-      ]
+      "image/png": "abcd"
      },
      "execution_count": null,
      "metadata": {
@@ -183,9 +171,7 @@
    "outputs": [
     {
      "data": {
-      "image/png": [
-       "abcd"
-      ]
+      "image/png": "abcd"
      },
      "execution_count": null,
      "metadata": {
@@ -302,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.5"
   },
   "title": "TITLE</title><script>alert('title')</script>",
   "widgets": {
